--- a/calculator.css
+++ b/calculator.css
@@ -1,9 +1,9 @@
 .title {
   text-align: center;
   margin-top: 130px;
-  margin-left: auto;
+/*   margin-left: auto;
   margin-right: auto;
-  width: 300px;
+  width: 300px; */
   font-size: 60px;
 }
 
